# jub-paper-trader

./: .gitignore  README.md  alembic.ini  jub_paper_trader.db  latest_cycle_dashboard.html  pyproject.toml
agent_service/: FLOW.md  bot_cycle.py  data_quality.py  debug_tools.py  decision_policy.py  exit_policy.py  feature_vector.py  normalize.py  optimizer_qpo.py  replay.py  scenario.py  signals.py  strategy.py
agent_service/interfaces/: __init__.py  contracts.py  signals.py
backend/: main.py
backend/api/: routes.py
backend/core/: settings.py
backend/dependencies/: wiring.py
db/: base.py
db/migrations/: README  env.py
db/migrations/versions/: 138384c2d74e_initial_schema.py  68db30135371_initial_schema.py
db/models/: __init__.py  orders.py  portfolio.py  positions.py  snapshots.py
db/repositories/: snapshots.py
docs/: cycle_report_analysis.md
scheduler/: cycle.py  runner.py
services/: alpaca_client.py  alpaca_data.py  execution_router.py  portfolio_engine.py  position_sizer.py  risk_guardrails.py
tests/: test_alpaca_client.py  test_alpaca_data.py  test_bot_cycle.py  test_data_quality.py  test_debug_api.py  test_debug_tools.py  test_decision_policy.py  test_exit_policy.py  test_interface_contracts.py  test_optimizer_qpo.py  test_package_imports.py  test_portfolio_engine.py  test_position_sizer_and_router.py  test_replay.py  test_risk_guardrails.py  test_scenario.py  test_scheduler_runner.py  test_settings.py
