[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jub-paper-trader"
version = "0.1.0"
description = "Baseline layout for a paper trading bot with API, agent service, and scheduler"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "httpx>=0.27.0",
]

[project.scripts]
jub-bot = "scheduler.runner:main"

[tool.setuptools]
packages = [
  "backend",
  "backend.api",
  "backend.core",
  "backend.dependencies",
  "agent_service",
  "agent_service.interfaces",
  "db",
  "db.models",
  "db.repositories",
  "db.migrations",
  "services",
  "scheduler",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
